--- a/motiv.tex
+++ b/motiv.tex
@@ -11,7 +11,7 @@ Recently, several complex Bayesian models based on latent variables to explain t
 (++ Probabilistic models we are interested in provide two ways of representing the data or network. One fall in the paradigm of mixture models and the other in the latent feature modeling. A motivation of those two modeling paradigm is that they are consistent with two key nonparametric prior for discrete data, namely the Dirichlet process (DP) and the the Indian Buffet Process (IBP). Many baysian model can be view as equivalent to truncated models with nonparametric priors. This provide a motivation to study those models. Furthermore, they are used as priors to generate latent features, either as proposition vector (class/DP) or binary vector (feature/IBP). It is admitted that those priors gives bursty features [accounting for burstiness in topic model]. We seek to clarify why this is true and how the burstiness can propagate at the degree level.~\\
 
 
-In the next section we will, first, explain the mathematical background in a machine learning context. Then, we will review the formal definition of properties of interest in social networks, and how this is translated in terms of assumptions within Bayesian priors. Secondly, we will study how those properties can be satisfied within our Bayesian framework. Finally, we will show empirical results (on synthetic and real datasets) to support our claims.~\\
+In the next section we will, first, explain the mathematical background in a machine learning context. Secondly, we will review the models of interest for dyadic data. Then, we will introduce the formal definition of properties of interest in social networks within the Bayesian frameworks, and how this is translated in terms of assumptions within Bayesian priors. Finally, we will show empirical results (on synthetic and real datasets) to support our claims.~\\
 
 %Study the poisson binomial distribution for the out links of a node. This is the degree distribution and should be bursty to have commmunity in networks.
 
