--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,7 @@
     
 %\author{Adrien Dulac}
 
-\title{Social Networks Topology\\ with Bayesian Perspective}
+\title{Social Networks Topology\\ with Bayesian Perspectives}
 
 %\date{avril 2015}
 
