--- a/related_work.tex
+++ b/related_work.tex
@@ -9,6 +9,8 @@ with high diagonal only...
 
 to read: Stochastic blockmodels and community structure in networks
 
+% Burstiness and Memory in Complex Systems
+
 = Model
 Recent work on MMSB and copula: Copula Mixed-Membership Stochastic Blockmodel with Subgr
 oup Correlation
